# steam-client-mod

./: .babelrc  .editorconfig  .eslintrc.json  .gitignore  .hintrc  .prettierrc  .swcrc  README.md  config.toml  debundle.config.json  package.json  pnpm-lock.yaml  steam.exe.lnk  tsconfig.json  webpack.config.js
injector/: Cargo.toml
injector/js-injector/: injector.js
injector/rust/: Cargo.toml
injector/rust/src/: args.rs  config.rs  friend.rs  library.rs  main.rs  server.rs  utils.rs
injector/rust/src/cmd/: friend.rs  library.rs  mod.rs  test.rs
injector/rust2/: Cargo.toml
injector/server/: Cargo.toml
injector/shared/: Cargo.toml
installer/: package.json  pnpm-lock.yaml  vite.config.ts
installer/src/: App.tsx  index.tsx
installer/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: build.mjs  common.mjs
scripts/patcher/: index.js  index.mjs
server/: Cargo.toml
server/src/: main.rs  proxy.rs
src/: constants.js  constants.ts  index.js  index.ts  modules.d.ts  steamed.ts
src/FriendClient/: index.js  index.ts  steamed.ts
src/LibraryClient/: index.js  index.ts
src/api/: index.ts
src/code_modules/: index.js
src/components/: Container.tsx  DialogButton.tsx  Input.tsx  index.ts
src/iframe-injector/: index.js
src/injector/: index.ts
src/js-patchers/: iframe-patcher.js  library-patcher.js
src/modules/: index.js
test/: bruh.cpp  hhe.js  man.cpp
testing-grouds/: basic-psudo-code.js  friends-dummy.js  friends.js  index_friends.html  libs.js  webpackGetter.js  windows-app.js  woah-comments-friends.js
zdumpy_test/: hhe.js
(+209 files in other folders)
