[package]
name = "injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
config = "0.13.3"
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["blocking"] }
