[package]
name = "injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
clap = { version = "4.0.32", features = ["derive"] }
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["blocking"] }
scraper = "0.16.0"
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
markup5ever = "0.11.0"
shared = { path = "../shared" }
